[gd_scene load_steps=3 format=3 uid="uid://bspdofnamr8n3"]

[ext_resource type="Script" path="res://scenes/hud/hud.gd" id="1_efwfw"]
[ext_resource type="Theme" uid="uid://bpgdw41tn1wyn" path="res://style/theme/default_theme.tres" id="1_qwfvv"]

[node name="hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_efwfw")

[node name="left_score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -341.5
offset_top = 50.0
offset_right = -219.5
offset_bottom = 188.0
grow_horizontal = 2
theme = ExtResource("1_qwfvv")
theme_override_colors/font_color = Color(0.713726, 0.713726, 0.713726, 1)
theme_override_font_sizes/font_size = 150
text = "0"
horizontal_alignment = 1

[node name="left_status" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -382.5
offset_top = 384.0
offset_right = -178.5
offset_bottom = 522.0
grow_horizontal = 2
theme = ExtResource("1_qwfvv")
theme_override_font_sizes/font_size = 75
text = "winner"

[node name="right_score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 341.5
offset_top = 50.0
offset_right = 463.5
offset_bottom = 188.0
grow_horizontal = 2
theme = ExtResource("1_qwfvv")
theme_override_colors/font_color = Color(0.713726, 0.713726, 0.713726, 1)
theme_override_font_sizes/font_size = 150
text = "0"
horizontal_alignment = 1

[node name="right_status" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 297.0
offset_top = 384.0
offset_right = 501.0
offset_bottom = 522.0
grow_horizontal = 2
theme = ExtResource("1_qwfvv")
theme_override_font_sizes/font_size = 75
text = "loser"
